# pico-i2clib

./: CMakeLists.txt
include/: pico-i2clib.h
src/: i2clib.c
